--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </section>
 <!------------------------Panneau 2-------------------------------------->
 
-    <section class="hebergement_populaire">
+    <aside class="hebergement_populaire">
         <section class="hebergement_populaire_titre">
             <h1 class="hebergement_populaire_titre_panneau" >Les plus populaires</h1>
             <h1 ><i class="fas fa-chart-line"></i></h1>
@@ -235,12 +235,12 @@
                 </div> 
             </div>
         </section>
-    </section>
+    </aside>
 
 </section>
 
 
-<!-----------------------FOOTERBODY / FOOTER----------------------------------------->
+<!-----------------------FOOTERMAIN / FOOTER----------------------------------------->
 
 <section class="actmarseille">
     <H1 class="actmarseille_titre"id="ancre2">Activités à Marseille</H1>
