--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header>
     
     
-    <figure><img class="imageflotante" src="images/logo/reservia.svg" alt="logo" title="Go!"/></figure>
+    <figure><img class="imageflotante" src="images/logo/Reservia.svg" alt="logo" title="Go!"/></figure>
 
 
     <nav>
