--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <section class="filtre">
   <div class="filtre_conteneur">
-    <h4>Filtres</h4>
+    <h4 style="font-family: 'ralewaybold';">Filtres</h4>
     <div class="filtre_eco">
         <div class="filtre_icon"><i class="fas fa-money-bill-wave"></i></div>
         <div class="filtre_text">Économique</div>
