Ajout balise Article

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <main class="hebergement" id="ancre1">
     
     <!--Panneau 1-->
-    <section class="hebergement_marseille">
+    <article class="hebergement_marseille">
         <h2 class="hebergement_marseille_titre">Hébergements à Marseille</h2>
         <div class="hebergement_marseille_panneau">
             
@@ -173,7 +173,7 @@
             </div>
         </div>
         <p style="width: 90%;height: 53px;margin: auto;font-family: 'ralewaybold';"><strong>Afficher plus</strong></p>
-    </section>
+    </article>
 <!--Panneau 2-->
 
     <aside class="hebergement_populaire">
